Added markdown to heatmap section 5

--- a/jupyter_notebooks/wtc_analysis.ipynb
+++ b/jupyter_notebooks/wtc_analysis.ipynb
@@ -3879,6 +3879,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The above heatmap again doesn't show much of a correlation between budget level, temperature and ratings.\n",
+        "\n",
+        "We can see though that there is a positive relationship between nightlife and urban. This could mean that travellers opting for urban places to travel to are also looking for a good nightlife of where they have travelled to.\n",
+        "\n",
+        "There is also a negative relationship between seclusion rating and urban ratings. This could suggest that travellers are less likely to opt for places that are in isolated places compare with highly populated towns. So the futher urban they travel the less likely they are going to visit places that secluded during their trip.\n",
+        "\n",
+        "Lastly there seems to be a slight positive relationship between culture rating and cuisine. This could suggest that some travellers are keen to experience the culture of the country they have travelled to by the local delicacies and meals they try while on their trip.\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {},
