added documentation files

--- a/jupyter_notebooks/wtc_analysis.ipynb
+++ b/jupyter_notebooks/wtc_analysis.ipynb
@@ -102,16 +102,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "project_root = r\"C:\\Users\\funmi\\OneDrive\\Documents\\Code Institute\\vscode-projects\\Worldwide Travel Analysis\\Worldwide_Travel_Analysis\" \n",
-        "os.chdir(project_root)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -136,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -171,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -380,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -423,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -815,7 +805,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1041,7 +1031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1281,7 +1271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1299,7 +1289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1542,7 +1532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1771,7 +1761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2025,7 +2015,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2051,7 +2041,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2277,7 +2267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2510,7 +2500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2740,7 +2730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3136,7 +3126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3159,7 +3149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3189,7 +3179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3271,7 +3261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3641,7 +3631,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3651,7 +3641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3713,7 +3703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3723,7 +3713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3735,7 +3725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3773,7 +3763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3951,9 +3941,9 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "base",
+      "display_name": "Python [conda env:base] *",
       "language": "python",
-      "name": "python3"
+      "name": "conda-base-py"
     },
     "language_info": {
       "codemirror_mode": {
